--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/structure.html" class="navbar__links"> Home </a>
+                    <a href="/" class="navbar__links"> Home </a>
                 </li>
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links"> About </a>
@@ -44,12 +44,12 @@
     </nav>
 
     <!--Hero Section-->
-    <div class="main-tech">
+    <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>ABOUT ME</h1>
-                <br>
-                <p>Amethyst Claudia Mendones Moran is a 4th Year BS Information Technology student at Ateneo De Naga University. As a student, she is able to take part and win in various photojournalism and film competitions on regional, national, and international levels. Moreover, she started her small photography business in 2020.</p>
+                <h1>AMETHYST CLAUDIA MORAN</h1>
+                <h2>AC Digital Arts & Technology</h2>
+                <p>Award-winning Photojournalist and Professional Photographer</p>
                 <button class="main__btn">
                     <a href="/">
                         Get Started
@@ -57,7 +57,7 @@
                 </button>
             </div>
             <div class="main__image--container">
-                <img src="images/adnu.jpg" alt="pic" id="main__img" width="1000px" height="400px"/>
+                <img src="images/ac.jpg" alt="pic" id="main__img" width="1000px" height="400px"/>
             </div>
         </div>
     </div>
